# MembershipManger

./: CMakeLists.txt  README.md
src/: main.cpp
src/app/ClockCheck/: ClockCheck.cpp  ClockCheck.h
src/app/Controller/: Controller.cpp  Controller.h
src/app/Entity/: MembersEntity.cpp  MembersEntity.h
src/app/Listener/: Listener.cpp  Listener.h
src/app/Service/: LightState.h  MembersManageService.cpp  MembersManageService.h
src/app/View/: LedView.cpp  LedView.h
src/hw/led/: LED.cpp  LED.h
sw_design/: golfMembersManager_Design.drawio
